AJS-28: fixing dialog z-index
git-svn-id: https://studio.atlassian.com/svn/AJS/branches/private/lhardy/dashboardAJS@32187 2c54a935-e501-0410-bc05-97a93f6bca70

--- a/src/main/resources/css/dialog.css
+++ b/src/main/resources/css/dialog.css
@@ -6,13 +6,16 @@
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 9997;
 }
 .shadow,
 .popup {
     position: fixed;
     left: 50%;
     top: 50%;
+    z-index: 9999;
 }
+.shadow {z-index: 9998;}
 .shadow * {
     position: absolute;
 }
